<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_primary"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/bebas_neue_bold_700"
        android:text="REGISTER"
        android:textColor="@color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textRegister"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textNamaLengkap"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama Lengkap"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/LinearLayout"
            app:layout_constraintTop_toBottomOf="@id/LinearLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/yellow_input"
            android:hint="Nama Lengkap"
            app:errorEnabled="true"
            android:layout_marginTop="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textUsername"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/LinearLayout"
            app:layout_constraintTop_toBottomOf="@id/LinearLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/yellow_input"
            android:hint="Username"
            app:errorEnabled="true"
            android:layout_marginBottom="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textEmail"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/LinearLayout"
            app:layout_constraintTop_toBottomOf="@id/LinearLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/yellow_input"
            android:hint="Email"
            app:errorEnabled="true"
            android:layout_marginBottom="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textNoTelp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nomor Telepon"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/LinearLayout"
            app:layout_constraintTop_toBottomOf="@id/LinearLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNoTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/yellow_input"
            android:hint="Nomor Telepon"
            app:errorEnabled="true"
            android:layout_marginBottom="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietNomor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textPassword"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/LinearLayout"
            app:layout_constraintTop_toBottomOf="@id/LinearLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/yellow_input"
            android:hint="Password"
            app:errorEnabled="true"
            android:layout_marginBottom="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_green"
        android:text="Daftar"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="619dp"
        android:typeface="monospace"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>